<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/shuffle"
        android:icon="@drawable/ic_action_shuffle"
        android:title="@string/menuShuffle"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mirror"
        android:icon="@drawable/ic_action_mirror"
        android:title="@string/menuMirror"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/colors"
        android:icon="@drawable/ic_action_colors"
        android:title="@string/menuColors"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/detail"
        android:icon="@drawable/ic_action_detail"
        android:title="@string/menuDetail"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/resize"
        android:icon="@drawable/ic_action_size"
        android:title="@string/menuResize"
        android:showAsAction="ifRoom"/>

</menu>
