<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/optionColors"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:text="@string/optionColor" />
    
	<RadioButton
	    android:id="@+id/radio1Colors"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
	    android:text="@string/option1Color" />
    
	<RadioButton
	    android:id="@+id/radio2Colors"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
	    android:text="@string/option2Color" />

	<RadioButton
	    android:id="@+id/radio3Colors"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
	    android:text="@string/option3Color" />
	
	<RadioButton
	    android:id="@+id/radio4Colors"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
	    android:text="@string/option4Color" />
				    	    
 </RadioGroup>