<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:text="@string/optionMirror" />
    
    <CheckBox
        android:id="@+id/checkMirrorX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="@string/optionMirrorX" />
    
    <CheckBox
        android:id="@+id/checkMirrorY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/optionMirrorY" />
    
 </LinearLayout>